--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -20,6 +21,7 @@
     "sequelize-cli": "^6.2.0",
     "sequelize-slugify": "^1.5.0",
     "slugify": "^1.5.3",
+    "socket.io": "^4.1.3",
     "static": "^2.0.0"
   },
   "scripts": {
